--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1601,4 +1601,10 @@ header{
     }
 }
 
+.site-container{
+    margin: 10px auto;
+    max-width: 1440px;
+    box-sizing: border-box;
+}
+
 /* purgecss end ignore */
