--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1607,4 +1607,30 @@ header{
     box-sizing: border-box;
 }
 
+.acf-map {
+  width: 100%;
+  height: 300px;
+}
+
+.acf-map img {
+  max-width: inherit !important;
+}
+
+.columns-agencia{
+	.column-1{
+		width: 30%;
+    	min-width: 30%;
+	}
+	.column-2{
+		min-width: calc(60% - 2.5rem);
+		.grid > div{
+			height: 300px;
+			img{
+				object-fit:cover;
+				height: 300px;
+			}
+		}
+	}
+}
+
 /* purgecss end ignore */
