--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1707,4 +1707,42 @@ header{
 	}
 }
 
+.opinions{
+    .wrapper{
+        max-width: 200px;
+        margin-right:15px;
+    }
+    .content-text{
+        height: 100px;
+        overflow: hidden;
+        white-space: normal;
+    }
+    .star{
+        height: 20px;
+        width:20px;
+        margin-right: 5px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-image: url(../img/star.svg);
+        &.star-half{
+            background-image: url(../img/half-star.svg);
+        }
+    }
+}
+
+@media (max-width: 1470px){
+    .site-container{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
+
+.error-404.not-found{
+    img{
+        margin:0 auto;
+        max-width: 800px
+    }
+}
+
 /* purgecss end ignore */
